Refactor to use file operations from XData-Pipeline-Ops